--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "*.html": "django-html",
-        "ostream": "cpp"
-    }
+        "ostream": "cpp",
+        "vector": "cpp",
+        "iostream": "cpp"
+    },
+    "liveServer.settings.port": 5501
 }
